# zorba-sqlite-module

./: CMakeLists.txt
cmake_modules/: FindSQLite3.cmake
cmake_modules/Windows/: FindSQLite3.cmake
src/: CMakeLists.txt  archive.xsd  config.h.cmake  sqlite_module.xq
src/sqlite_module.xq.src/: sqlite_module.cpp  sqlite_module.h
test/ExpQueryResults/: test0.xml.res  test10.xml.res  test18.xml.res  test2.xml.res  test3.xml.res  test4.xml.res  test5.xml.res  test6.xml.res  test7.xml.res  test8.xml.res  test9.xml.res
test/Queries/: small2.db  smalldb.sqlite  test0.xq  test1.xq  test10.xq  test11.spec  test11.xq  test12.spec  test12.xq  test13.spec  test13.xq  test14.spec  test14.xq  test15.spec  test15.xq  test16.spec  test16.xq  test17.spec  test17.xq  test18.xq  test2.xq  test3.spec  test3.xq  test4.spec  test4.xq  test5.xq  test6.xq  test7.xq  test8.xq  test9.xq
